exports[`Page when there is availability renders the data 1`] = `
<div
  className="container">
  <div
    className="row">
    <h3>
      London School of Barbering availability
    </h3>
  </div>
  <div
    className="row">
    <LocationHeader
      dates={
        Object {
          "end": "date",
          "start": "date",
        }
      }
      location="St Pauls/Farringdon - 6 West Smithfield EC1A 9JX"
      service="1 Fade Cut - 1/4cm on sides" />
  </div>
  <div
    className="row">
    <AvailabilityList
      availability={
        Array [
          Object {
            "date": "date",
            "times": Array [
              1,
              2,
            ],
          },
        ]
      } />
  </div>
</div>
`;

exports[`Page when there is no availability renders the loading spinner 1`] = `
<div
  className="container">
  <div
    className="row">
    <h3>
      London School of Barbering availability
    </h3>
  </div>
  <div
    className="row">
    <LocationHeader
      dates={null}
      location="St Pauls/Farringdon - 6 West Smithfield EC1A 9JX"
      service="1 Fade Cut - 1/4cm on sides" />
  </div>
  <div
    className="row">
    <Loading />
  </div>
</div>
`;
